Changes to portfolio page

--- a/Public/Sass/Base/_base.theme.scss
+++ b/Public/Sass/Base/_base.theme.scss
@@ -2,8 +2,8 @@
 @import "base.palette";
 
 html, body{
-    // background: #FFF url("../../images/background.png") repeat;
-    background: #FFF;
+    background: #FFF url("../../images/bg.png") repeat;
+    // background: #FFF;
 }
 
 body{
