--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
     <div style="flex: 1;"></div>
-    <div class="container-fluid blue" id="footer" style="margin-bottom: 0;">
+    <div class="container-fluid blue" id="footer" style="margin-bottom: 0; margin-top: 80px;">
         <div class="container gray">
             <div class="row">
                 <div class="col" style="height: 180px;">
