--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -11,10 +11,53 @@
         <div class="page-header-line"></div>
     </div>
 
-    <div class="grid">
-        <div class="box" style="background: red">A</div>
-        <div class="box" style="background: blue">B</div>
-        <div class="box" style="background: green">C</div>
-        <div class="box" style="background: purple">D</div>
+    <!-- <div class="container box-container">
+        <div class="row">
+            <div class="col-md-6 col-sm-12 box one"></div>
+            <div class="col-md-6 col-sm-12 box two"></div>
+        </div>
+        <div class="row">
+            <div class="col-md-6 col-sm-12 box three"></div>
+            <div class="col-md-6 col-sm-12 box four"></div>
+        </div>
+    </div> -->
+
+    <div class="container" style="margin-top: 40px;">
+        <div class="row">
+            <div class="col-lg-4 col-md-12">
+                <div class="card text-white bg-dark" style="width: 100%;">
+                    <a href="https://sselke.github.io/clone-website/" target="_blank">
+                        <img class="card-img-top" src="/images/morris.jpg" alt="Card image cap">
+                        <div class="card-header">Morris-Jenkins</div>
+                        <div class="card-body">
+                            <p class="card-text">Front page for the Morris-Jenkins HVAC and Plumbing service.</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-12">
+                <div class="card text-white bg-dark" style="width: 100%;">
+                    <a href="https://enigmatic-brook-79010.herokuapp.com/" target="_blank">
+                        <img class="card-img-top" src="/images/yelpcamp.jpg" alt="Card image cap">
+                        <div class="card-header">YelpCamp</div>
+                        <div class="card-body">
+                            <p class="card-text">A fully functioning social media website that has a bootstrap front-end, and a Node.js back-end using the express.js framework.</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-12">
+                <div class="card text-white bg-dark" style="width: 100%;">
+                    <a href="https://sselke.github.io/Sounds-Demo-js/" target="_blank">
+                        <img class="card-img-top" src="/images/circle.PNG" alt="Card image cap">
+                        <div class="card-header">Sound Explosion</div>
+                        <div class="card-body">
+                            <p class="card-text">This is a game that uses the players keyboard to interact with the screen. This demo utilizes vanilla javascript
+                                and a couple libraries.</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
     </div>
 <% include partials/footer %>
