--- a/views/resources.ejs
+++ b/views/resources.ejs
@@ -13,47 +13,7 @@
 
 <div class="container resources-container">
     <div class="row">
-        <div class="col-md-3 col-sm-6">
-            <div id="comment_bubble">
-                <i class="far fa-lightbulb resource-icon light"></i>
-            </div>
-            <h4>Intiutive</h4>
-            <p>
-                Easy to use and understand for all ages.
-            </p>
-        </div>
-        <div class="col-md-3 col-sm-6">
-            <div id="comment_bubble">
-                <i class="fas fa-desktop resource-icon resource-icon-two"></i>
-                <i class="fas fa-mobile-alt resource-icon resource-icon-two"></i>
-            </div>
-            <h4>Responsive</h4>
-            <p>
-                Built to look and feel great on any screen size.
-            </p>
-        </div>
-        <div class="col-md-3 col-sm-6">
-            <div id="comment_bubble">
-                <i class="fas fa-space-shuttle resource-icon resource-icon-shuttle"></i>
-                <i class="fab fa-gripfire resource-icon resource-icon-fire flame"></i>
-            </div>
-            <h4>Dynamic</h4>
-            <p>
-                Websites should be fun to view! Boring static website just don't cut it.
-            </p>
-        </div>
-        <div class="col-md-3 col-sm-6">
-            <div id="comment_bubble">
-                <i class="fas fa-cogs resource-icon resource-icon-cog"></i>
-            </div>
-            <h4>Intelligent</h4>
-            <p id="description">
-                Front-end and Back-end designed to co-operate with each other perfectly.
-            </p>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-6 col-md-12" style="margin-top: 40px;">
+        <div class="col-lg-6 col-md-12" style="margin-bottom: 40px;">
             <div class="container">
                 <div class="container">
                     <div class="hexagon">
@@ -204,6 +164,46 @@
                     </div>
                 </div>
             </aside>
+        </div>
+    </div>
+    <div class="row" style="margin-top: 40px;">
+        <div class="col-md-3 col-sm-6">
+            <div id="comment_bubble">
+                <i class="far fa-lightbulb resource-icon light"></i>
+            </div>
+            <h4>Intiutive</h4>
+            <p>
+                Easy to use and understand for all ages.
+            </p>
+        </div>
+        <div class="col-md-3 col-sm-6">
+            <div id="comment_bubble">
+                <i class="fas fa-desktop resource-icon resource-icon-two"></i>
+                <i class="fas fa-mobile-alt resource-icon resource-icon-two"></i>
+            </div>
+            <h4>Responsive</h4>
+            <p>
+                Built to look and feel great on any screen size.
+            </p>
+        </div>
+        <div class="col-md-3 col-sm-6">
+            <div id="comment_bubble">
+                <i class="fas fa-space-shuttle resource-icon resource-icon-shuttle"></i>
+                <i class="fab fa-gripfire resource-icon resource-icon-fire flame"></i>
+            </div>
+            <h4>Dynamic</h4>
+            <p>
+                Websites should be fun to view! Boring static website just don't cut it.
+            </p>
+        </div>
+        <div class="col-md-3 col-sm-6">
+            <div id="comment_bubble">
+                <i class="fas fa-cogs resource-icon resource-icon-cog"></i>
+            </div>
+            <h4>Intelligent</h4>
+            <p id="description">
+                Front-end and Back-end designed to co-operate with each other perfectly.
+            </p>
         </div>
     </div>
 </div>
