--- a/Public/Assets/css/portfolio.css
+++ b/Public/Assets/css/portfolio.css
@@ -68,7 +68,7 @@ body {
 }
 
 html, body {
-  background: #FFF;
+  background: #FFF url("../../images/bg.png") repeat;
 }
 
 body {
@@ -474,26 +474,15 @@ i {
   text-align: center;
 }
 
-.grid {
+.card {
   margin: 20px auto;
-  background-color: #fff;
-  width: 100%;
-  height: 100%;
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(50px, 300px));
-  grid-template-rows: repeat(auto-fill, minmax(50px, 300px));
-  grid-row: auto auto;
 }
-.grid .box {
-  background-color: #333;
-  padding: 20px;
-  color: #fff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 40px;
-  font-family: sans-serif;
-  position: relative;
+.card > a:hover {
+  color: #FFF;
+  text-decoration: none;
+}
+.card > a {
+  color: #FFF;
 }
 
 /*# sourceMappingURL=../Assets/css/portfolio.css.map */
