--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -27,7 +27,7 @@
             <div class="col-lg-4 col-md-12">
                 <div class="card text-white bg-dark" style="width: 100%;">
                     <a href="https://sselke.github.io/clone-website/" target="_blank">
-                        <img class="card-img-top" src="/images/morris.jpg" alt="Card image cap">
+                        <img class="card-img-top" src="/images/3.JPG" alt="Card image cap">
                         <div class="card-header">Morris-Jenkins</div>
                         <div class="card-body">
                             <p class="card-text">Front page for the Morris-Jenkins HVAC and Plumbing service.</p>
@@ -38,7 +38,7 @@
             <div class="col-lg-4 col-md-12">
                 <div class="card text-white bg-dark" style="width: 100%;">
                     <a href="https://enigmatic-brook-79010.herokuapp.com/" target="_blank">
-                        <img class="card-img-top" src="/images/me.jpeg" alt="Card image cap">
+                        <img class="card-img-top" src="/images/2.JPG" alt="Card image cap">
                         <div class="card-header">YelpCamp</div>
                         <div class="card-body">
                             <p class="card-text">A fully functioning social media website that has a bootstrap front-end, and a Node.js back-end using the express.js framework.</p>
