--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,37 +7,37 @@
     <% include partials/header %>
 
     <div class="head-container">
-        <h1 style="margin: 30px 40px 30px 40px;">
+        <h1 class="intro">
             Hi, my name is Scott. I am a Full-Stack
-            <br>Web Developer and Designer located in Tempe, Arizona.
+            Web Developer and Designer located in Tempe, Arizona.
         </h1>
         
         <hr>
     </div>
 
-<div class="container">
+<div class="container" style="margin: 40px auto">
     <div class="row">
         <div class="col">
-            <div class="jumbotron">
-                <h6>Hello</h6>
+            <div>
+                 <img class="picture" src="/images/ashandi.jpg" alt="Scott and Ashley in Sedona, Arizona">
             </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-4 col-xs-12">
-            <div class="jumbotron">
-                <h6>Hello</h6>
-            </div>
-        </div>
-        <div class="col-md-4 col-xs-12">
-            <div class="jumbotron">
-                <h6>Hello</h6>
-            </div>
-        </div>
-        <div class="col-md-4 col-xs-12">
-            <div class="jumbotron">
-                <h6>Hello</h6>
-            </div>
+            <section class="info">
+                <h6>Front-End Development</h6>
+                <p>On the Front-End I employ HTML, EJS, CSS, SASS, Javascript, and jQuery to create fast and responsive web designs. I also use frameworks such as Bootstrap, Semantic-UI as well as custom built libraries.</p>
+                <h6>Back-End Development</h6>
+                <p>On the Server-Side I create modular and logical code that allows me to create dynamic sites for all use-cases. I primarily use Node.js, with an express framework; However I am knowledgeable of Angular5, React.js and more traditional languages such as PHP and Java.</p>
+                <h6>UX-UI Approach</h6>
+                <p>All of my websites start with UX/UI in mind. I lay the groundwork for the pages structure first, and then build on top a beautiful user experience.</p>
+            </section>
+
+            <hr>
+
+            <section>
+                <h3>Want to work together?</h3>
+                <button class="btn btn-dark btn-block" style="width: 180px; margin: 40px auto"><a href="/contact">Email Me</a></button>
+            </section>
+
+            <hr>
         </div>
     </div>
 </div>
