--- a/Public/Assets/css/about.css
+++ b/Public/Assets/css/about.css
@@ -321,6 +321,11 @@ a:hover, a:focus {
   border-top: 86.6px solid #1ba49c;
 }
 
+* {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 html {
   height: 100%;
   min-height: 100% !important;
