--- a/Public/Sass/Base/_base.scss
+++ b/Public/Sass/Base/_base.scss
@@ -5,6 +5,11 @@
 @import "_base.mixins";
 @import "_base.icons";
 
+* {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 html {
     height: 100%;
     min-height: 100% !important;
