--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-    <div style="flex: 1;"></div>
+    <div class="flex"></div>
     <div class="container-fluid blue" id="footer" style="margin-bottom: 0;">
         <div class="container gray">
             <div class="row">
