--- a/views/about.ejs
+++ b/views/about.ejs
@@ -7,11 +7,9 @@
 <% include partials/header %>
 
 <div class="container">
-    <div class="head-container">
         <h2 class="page-header dark-text">About</h2>
         <div class="page-header-line"></div>
-    </div>
-    <div class="container">
+    <div class="container" style="margin-top: 40px;">
         <div class="row">
             <div class="col">
                 <div class="image-container">
