--- a/Public/Sass/Pages/resources.scss
+++ b/Public/Sass/Pages/resources.scss
@@ -8,7 +8,7 @@
 //Demo
 .skills {
   width: 100%;
-  max-width: 400px;
+  max-width: 398px;
   height: 750px;
   margin: $spacing-normal auto;
   box-sizing: border-box;
@@ -26,7 +26,7 @@
 
   position: absolute;
 
-  background: rgba(#eee, 0.6);
+  background: rgba(#000, 0.2);
 
   &.l--0 {
     left: 0;
