--- a/views/resources.ejs
+++ b/views/resources.ejs
@@ -87,6 +87,11 @@
                                         JavaScript
                                     </span>
                                 </li>
+                                <li class="chart__bar" id="angular" style="width: 80%;">
+                                    <span  class="chart__label white">
+                                        ExpressJS
+                                    </span>
+                                </li>
                                 <li class="chart__bar" id="angular" style="width: 40%;">
                                     <span  class="chart__label white">
                                         AngularJS
