--- a/Public/Assets/css/portfolio.css
+++ b/Public/Assets/css/portfolio.css
@@ -77,8 +77,13 @@ body {
 }
 
 .site-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   min-height: 100%;
 }
 
@@ -116,7 +121,9 @@ a:hover, a:focus {
 }
 
 .title-container {
-  transform: translateY(-40px);
+  -webkit-transform: translateY(-40px);
+      -ms-transform: translateY(-40px);
+          transform: translateY(-40px);
 }
 
 .hidden {
@@ -171,7 +178,8 @@ a:hover, a:focus {
   margin-top: 24px;
   font-size: 48px;
   opacity: 1;
-  animation: 0.65s pull-left ease-in;
+  -webkit-animation: 0.65s pull-left ease-in;
+          animation: 0.65s pull-left ease-in;
 }
 
 .page-header-line {
@@ -179,7 +187,8 @@ a:hover, a:focus {
   height: 5px;
   background: #2a3b4e;
   margin: 10px auto;
-  animation: 0.65s pull-left ease-in;
+  -webkit-animation: 0.65s pull-left ease-in;
+          animation: 0.65s pull-left ease-in;
 }
 
 .head-container {
@@ -196,11 +205,9 @@ a:hover, a:focus {
   margin-right: auto;
   border: none !important;
   -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  transform: rotate(0deg);
+  -ms-transform: rotate(0deg);
+      transform: rotate(0deg);
   -webkit-transition: 0.5s ease-in-out;
-  -moz-transition: 0.5s ease-in-out;
   -o-transition: 0.5s ease-in-out;
   transition: 0.5s ease-in-out;
   cursor: pointer;
@@ -216,11 +223,9 @@ a:hover, a:focus {
   opacity: 1;
   left: 0;
   -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  transform: rotate(0deg);
+  -ms-transform: rotate(0deg);
+      transform: rotate(0deg);
   -webkit-transition: 0.25s ease-in-out;
-  -moz-transition: 0.25s ease-in-out;
   -o-transition: 0.25s ease-in-out;
   transition: 0.25s ease-in-out;
 }
@@ -245,16 +250,14 @@ a:hover, a:focus {
 
 #nav-icon3.open span:nth-child(2) {
   -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
-  transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+      transform: rotate(45deg);
 }
 
 #nav-icon3.open span:nth-child(3) {
   -webkit-transform: rotate(-45deg);
-  -moz-transform: rotate(-45deg);
-  -o-transform: rotate(-45deg);
-  transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+      transform: rotate(-45deg);
 }
 
 #nav-icon3.open span:nth-child(4) {
@@ -269,8 +272,6 @@ a:hover, a:focus {
   background: #1ba49c;
   margin: 24px auto;
   position: relative;
-  -moz-border-radius: 12px;
-  -webkit-border-radius: 12px;
   border-radius: 12px;
 }
 
@@ -292,8 +293,6 @@ a:hover, a:focus {
   background: #1ba49c;
   margin: 24px auto;
   position: relative;
-  -moz-border-radius: 12px;
-  -webkit-border-radius: 12px;
   border-radius: 12px;
 }
 
@@ -332,7 +331,8 @@ html {
 }
 
 body {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   position: relative;
   min-height: 100%;
   height: 100%;
@@ -386,6 +386,15 @@ h6 {
   font-size: 14.4px;
 }
 
+@-webkit-keyframes pull-left {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 @keyframes pull-left {
   0% {
     opacity: 0;
@@ -417,7 +426,9 @@ h1 {
 }
 
 .flex {
-  flex: 1;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 
 #push {
@@ -446,9 +457,15 @@ h1 {
   margin: 0 auto;
   margin-top: 24px;
   width: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .social {
@@ -459,10 +476,14 @@ h1 {
   border-radius: 50%;
   text-align: center;
   margin: 0 10px;
+  -webkit-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
 .social:hover {
-  transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+      -ms-transform: scale(1.2);
+          transform: scale(1.2);
   background-color: #1ba49c;
 }
 
@@ -493,5 +514,3 @@ i {
 .card > a {
   color: #FFF;
 }
-
-/*# sourceMappingURL=../Assets/css/portfolio.css.map */
