--- a/Public/Sass/Base/_base.theme.scss
+++ b/Public/Sass/Base/_base.theme.scss
@@ -46,6 +46,11 @@ a{
     }
 }
 
+.left-justify{
+    text-align: left;
+    justify-content: left;
+}
+
 .jumbotron{
     border-radius: 15px !important;
     width: 100%;
