--- a/Public/Assets/css/contact.css
+++ b/Public/Assets/css/contact.css
@@ -110,6 +110,11 @@ a:hover, a:focus {
   }
 }
 
+.left-justify {
+  text-align: left;
+  justify-content: left;
+}
+
 .jumbotron {
   border-radius: 15px !important;
   width: 100%;
