--- a/Public/Assets/css/portfolio.css
+++ b/Public/Assets/css/portfolio.css
@@ -77,13 +77,8 @@ body {
 }
 
 .site-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   min-height: 100%;
 }
 
@@ -115,15 +110,18 @@ a:hover, a:focus {
   }
 }
 
+.left-justify {
+  text-align: left;
+  justify-content: left;
+}
+
 .jumbotron {
   border-radius: 15px !important;
   width: 100%;
 }
 
 .title-container {
-  -webkit-transform: translateY(-40px);
-      -ms-transform: translateY(-40px);
-          transform: translateY(-40px);
+  transform: translateY(-40px);
 }
 
 .hidden {
@@ -178,8 +176,7 @@ a:hover, a:focus {
   margin-top: 24px;
   font-size: 48px;
   opacity: 1;
-  -webkit-animation: 0.65s pull-left ease-in;
-          animation: 0.65s pull-left ease-in;
+  animation: 0.65s pull-left ease-in;
 }
 
 .page-header-line {
@@ -187,8 +184,7 @@ a:hover, a:focus {
   height: 5px;
   background: #2a3b4e;
   margin: 10px auto;
-  -webkit-animation: 0.65s pull-left ease-in;
-          animation: 0.65s pull-left ease-in;
+  animation: 0.65s pull-left ease-in;
 }
 
 .head-container {
@@ -205,9 +201,11 @@ a:hover, a:focus {
   margin-right: auto;
   border: none !important;
   -webkit-transform: rotate(0deg);
-  -ms-transform: rotate(0deg);
-      transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
   -webkit-transition: 0.5s ease-in-out;
+  -moz-transition: 0.5s ease-in-out;
   -o-transition: 0.5s ease-in-out;
   transition: 0.5s ease-in-out;
   cursor: pointer;
@@ -223,9 +221,11 @@ a:hover, a:focus {
   opacity: 1;
   left: 0;
   -webkit-transform: rotate(0deg);
-  -ms-transform: rotate(0deg);
-      transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
   -webkit-transition: 0.25s ease-in-out;
+  -moz-transition: 0.25s ease-in-out;
   -o-transition: 0.25s ease-in-out;
   transition: 0.25s ease-in-out;
 }
@@ -250,14 +250,16 @@ a:hover, a:focus {
 
 #nav-icon3.open span:nth-child(2) {
   -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-      transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
 }
 
 #nav-icon3.open span:nth-child(3) {
   -webkit-transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);
-      transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
 }
 
 #nav-icon3.open span:nth-child(4) {
@@ -272,6 +274,8 @@ a:hover, a:focus {
   background: #1ba49c;
   margin: 24px auto;
   position: relative;
+  -moz-border-radius: 12px;
+  -webkit-border-radius: 12px;
   border-radius: 12px;
 }
 
@@ -293,6 +297,8 @@ a:hover, a:focus {
   background: #1ba49c;
   margin: 24px auto;
   position: relative;
+  -moz-border-radius: 12px;
+  -webkit-border-radius: 12px;
   border-radius: 12px;
 }
 
@@ -331,8 +337,7 @@ html {
 }
 
 body {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   position: relative;
   min-height: 100%;
   height: 100%;
@@ -386,15 +391,6 @@ h6 {
   font-size: 14.4px;
 }
 
-@-webkit-keyframes pull-left {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
 @keyframes pull-left {
   0% {
     opacity: 0;
@@ -426,9 +422,7 @@ h1 {
 }
 
 .flex {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  flex: 1;
 }
 
 #push {
@@ -457,15 +451,9 @@ h1 {
   margin: 0 auto;
   margin-top: 24px;
   width: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
 }
 
 .social {
@@ -476,14 +464,10 @@ h1 {
   border-radius: 50%;
   text-align: center;
   margin: 0 10px;
-  -webkit-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
 .social:hover {
-  -webkit-transform: scale(1.2);
-      -ms-transform: scale(1.2);
-          transform: scale(1.2);
+  transform: scale(1.2);
   background-color: #1ba49c;
 }
 
@@ -514,3 +498,5 @@ i {
 .card > a {
   color: #FFF;
 }
+
+/*# sourceMappingURL=../Assets/css/portfolio.css.map */
