--- a/Public/Assets/css/resources.css
+++ b/Public/Assets/css/resources.css
@@ -77,13 +77,8 @@ body {
 }
 
 .site-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   min-height: 100%;
 }
 
@@ -115,15 +110,18 @@ a:hover, a:focus {
   }
 }
 
+.left-justify {
+  text-align: left;
+  justify-content: left;
+}
+
 .jumbotron {
   border-radius: 15px !important;
   width: 100%;
 }
 
 .title-container {
-  -webkit-transform: translateY(-40px);
-      -ms-transform: translateY(-40px);
-          transform: translateY(-40px);
+  transform: translateY(-40px);
 }
 
 .hidden {
@@ -178,8 +176,7 @@ a:hover, a:focus {
   margin-top: 24px;
   font-size: 48px;
   opacity: 1;
-  -webkit-animation: 0.65s pull-left ease-in;
-          animation: 0.65s pull-left ease-in;
+  animation: 0.65s pull-left ease-in;
 }
 
 .page-header-line {
@@ -187,8 +184,7 @@ a:hover, a:focus {
   height: 5px;
   background: #2a3b4e;
   margin: 10px auto;
-  -webkit-animation: 0.65s pull-left ease-in;
-          animation: 0.65s pull-left ease-in;
+  animation: 0.65s pull-left ease-in;
 }
 
 .head-container {
@@ -205,9 +201,11 @@ a:hover, a:focus {
   margin-right: auto;
   border: none !important;
   -webkit-transform: rotate(0deg);
-  -ms-transform: rotate(0deg);
-      transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
   -webkit-transition: 0.5s ease-in-out;
+  -moz-transition: 0.5s ease-in-out;
   -o-transition: 0.5s ease-in-out;
   transition: 0.5s ease-in-out;
   cursor: pointer;
@@ -223,9 +221,11 @@ a:hover, a:focus {
   opacity: 1;
   left: 0;
   -webkit-transform: rotate(0deg);
-  -ms-transform: rotate(0deg);
-      transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
   -webkit-transition: 0.25s ease-in-out;
+  -moz-transition: 0.25s ease-in-out;
   -o-transition: 0.25s ease-in-out;
   transition: 0.25s ease-in-out;
 }
@@ -250,14 +250,16 @@ a:hover, a:focus {
 
 #nav-icon3.open span:nth-child(2) {
   -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-      transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
 }
 
 #nav-icon3.open span:nth-child(3) {
   -webkit-transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);
-      transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
 }
 
 #nav-icon3.open span:nth-child(4) {
@@ -272,6 +274,8 @@ a:hover, a:focus {
   background: #1ba49c;
   margin: 24px auto;
   position: relative;
+  -moz-border-radius: 12px;
+  -webkit-border-radius: 12px;
   border-radius: 12px;
 }
 
@@ -293,6 +297,8 @@ a:hover, a:focus {
   background: #1ba49c;
   margin: 24px auto;
   position: relative;
+  -moz-border-radius: 12px;
+  -webkit-border-radius: 12px;
   border-radius: 12px;
 }
 
@@ -331,8 +337,7 @@ html {
 }
 
 body {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   position: relative;
   min-height: 100%;
   height: 100%;
@@ -386,15 +391,6 @@ h6 {
   font-size: 14.4px;
 }
 
-@-webkit-keyframes pull-left {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
 @keyframes pull-left {
   0% {
     opacity: 0;
@@ -426,9 +422,7 @@ h1 {
 }
 
 .flex {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  flex: 1;
 }
 
 #push {
@@ -457,15 +451,9 @@ h1 {
   margin: 0 auto;
   margin-top: 24px;
   width: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
 }
 
 .social {
@@ -476,14 +464,10 @@ h1 {
   border-radius: 50%;
   text-align: center;
   margin: 0 10px;
-  -webkit-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
 .social:hover {
-  -webkit-transform: scale(1.2);
-      -ms-transform: scale(1.2);
-          transform: scale(1.2);
+  transform: scale(1.2);
   background-color: #1ba49c;
 }
 
@@ -511,10 +495,9 @@ i {
 .skills {
   width: 100%;
   max-width: 398px;
-  height: 750px;
+  height: 780px;
   margin: 24px auto;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   position: relative;
 }
 
@@ -576,16 +559,13 @@ i {
   margin: 0 0 10px;
   font-weight: bold;
   opacity: 0;
-  -webkit-animation: 0.5s anim-lightspeed-in ease forwards;
-          animation: 0.5s anim-lightspeed-in ease forwards;
+  animation: 0.5s anim-lightspeed-in ease forwards;
 }
 .chart--prod .chart__title {
-  -webkit-animation-delay: 3.3s;
-          animation-delay: 3.3s;
+  animation-delay: 3.3s;
 }
 .chart--design .chart__title {
-  -webkit-animation-delay: 4.5s;
-          animation-delay: 4.5s;
+  animation-delay: 4.5s;
 }
 
 .chart--horiz {
@@ -596,80 +576,66 @@ i {
 .chart__bar {
   height: 25px;
   margin-bottom: 10px;
-  background: -webkit-gradient(linear, right top, left top, from(#4cb8c4), to(#3cd3ad));
-  background: -webkit-linear-gradient(right, #4cb8c4, #3cd3ad);
-  background: -o-linear-gradient(right, #4cb8c4, #3cd3ad);
   background: linear-gradient(to left, #4cb8c4, #3cd3ad);
   border-top-right-radius: 4px;
   border-bottom-right-radius: 4px;
   opacity: 0;
   background-position: 100% 0;
-  -webkit-animation: 1s anim-lightspeed-in ease forwards;
-          animation: 1s anim-lightspeed-in ease forwards;
+  animation: 1s anim-lightspeed-in ease forwards;
+}
+.chart--dev .chart__bar:nth-of-type(12) {
+  animation-delay: 2.9s;
 }
 .chart--dev .chart__bar:nth-of-type(11) {
-  -webkit-animation-delay: 2.7s;
-          animation-delay: 2.7s;
+  animation-delay: 2.7s;
 }
 .chart--dev .chart__bar:nth-of-type(10) {
-  -webkit-animation-delay: 2.5s;
-          animation-delay: 2.5s;
+  animation-delay: 2.5s;
 }
 .chart--dev .chart__bar:nth-of-type(9) {
-  -webkit-animation-delay: 2.3s;
-          animation-delay: 2.3s;
+  animation-delay: 2.3s;
 }
 .chart--dev .chart__bar:nth-of-type(8) {
-  -webkit-animation-delay: 2.1s;
-          animation-delay: 2.1s;
+  animation-delay: 2.1s;
 }
 .chart--dev .chart__bar:nth-of-type(7) {
-  -webkit-animation-delay: 1.9s;
-          animation-delay: 1.9s;
+  animation-delay: 1.9s;
 }
 .chart--dev .chart__bar:nth-of-type(6) {
-  -webkit-animation-delay: 1.7s;
-          animation-delay: 1.7s;
+  animation-delay: 1.7s;
 }
 .chart--dev .chart__bar:nth-of-type(5) {
-  -webkit-animation-delay: 1.5s;
-          animation-delay: 1.5s;
+  animation-delay: 1.5s;
 }
 .chart--dev .chart__bar:nth-of-type(4) {
-  -webkit-animation-delay: 1.3s;
-          animation-delay: 1.3s;
+  animation-delay: 1.3s;
 }
 .chart--dev .chart__bar:nth-of-type(3) {
-  -webkit-animation-delay: 1.1s;
-          animation-delay: 1.1s;
+  animation-delay: 1.1s;
 }
 .chart--dev .chart__bar:nth-of-type(2) {
-  -webkit-animation-delay: 0.9s;
-          animation-delay: 0.9s;
+  animation-delay: 0.9s;
 }
 .chart--dev .chart__bar:nth-of-type(1) {
-  -webkit-animation-delay: 0.7s;
-          animation-delay: 0.7s;
+  animation-delay: 0.7s;
+}
+.chart--prod .chart__bar:nth-of-type(3) {
+  animation-delay: 4.4s;
 }
 .chart--prod .chart__bar:nth-of-type(2) {
-  -webkit-animation-delay: 4.2s;
-          animation-delay: 4.2s;
+  animation-delay: 4.2s;
 }
 .chart--prod .chart__bar:nth-of-type(1) {
-  -webkit-animation-delay: 4s;
-          animation-delay: 4s;
+  animation-delay: 4s;
 }
 .chart--design .chart__bar:nth-of-type(3) {
-  -webkit-animation-delay: 5.6s;
-          animation-delay: 5.6s;
+  animation-delay: 5.6s;
 }
 .chart--design .chart__bar:nth-of-type(2) {
-  -webkit-animation-delay: 5.4s;
-          animation-delay: 5.4s;
+  animation-delay: 5.4s;
 }
 .chart--design .chart__bar:nth-of-type(1) {
-  -webkit-animation-delay: 5.2s;
-          animation-delay: 5.2s;
+  animation-delay: 5.2s;
 }
 
 .chart__label {
@@ -678,50 +644,14 @@ i {
   color: white;
 }
 
-.click--me {
-  -webkit-animation: shake 0.9s cubic-bezier(0.36, 0.07, 0.19, 0.97) infinite;
-          animation: shake 0.9s cubic-bezier(0.36, 0.07, 0.19, 0.97) infinite;
-  -webkit-animation-delay: 3s;
-          animation-delay: 3s;
-  -webkit-transform: translate3d(0, 0, 0);
-          transform: translate3d(0, 0, 0);
-  -webkit-backface-visibility: hidden;
-          backface-visibility: hidden;
-  -webkit-perspective: 1000px;
-          perspective: 1000px;
-}
-
-@-webkit-keyframes anim-lightspeed-in {
-  0% {
-    -webkit-transform: translateX(-200%);
-            transform: translateX(-200%);
-    opacity: 1;
-  }
-  100% {
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
-    opacity: 1;
-  }
-}
-
 @keyframes anim-lightspeed-in {
   0% {
-    -webkit-transform: translateX(-200%);
-            transform: translateX(-200%);
+    transform: translateX(-200%);
     opacity: 1;
   }
   100% {
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
+    transform: translateX(0);
     opacity: 1;
-  }
-}
-@-webkit-keyframes light {
-  0% {
-    color: white;
-  }
-  50% {
-    color: yellow;
   }
 }
 @keyframes light {
@@ -730,17 +660,6 @@ i {
   }
   50% {
     color: yellow;
-  }
-}
-@-webkit-keyframes flame {
-  0% {
-    opacity: 0;
-  }
-  50% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
   }
 }
 @keyframes flame {
@@ -763,13 +682,11 @@ i {
 }
 
 .light {
-  -webkit-animation: 2s light ease-in-out infinite;
-          animation: 2s light ease-in-out infinite;
+  animation: 2s light ease-in-out infinite;
 }
 
 .flame {
-  -webkit-animation: 2s flame 300ms ease-in-out infinite;
-          animation: 2s flame 300ms ease-in-out infinite;
+  animation: 2s flame 300ms ease-in-out infinite;
 }
 
 .resource-icon-two {
@@ -783,18 +700,14 @@ i {
 .resource-icon-shuttle {
   left: 30px;
   padding-top: 4px;
-  -webkit-transform: rotate(-45deg);
-      -ms-transform: rotate(-45deg);
-          transform: rotate(-45deg);
+  transform: rotate(-45deg);
   z-index: 1;
 }
 
 .resource-icon-fire {
   color: red;
   font-size: 35px;
-  -webkit-transform: translate(-105px, 35px) rotate(-140deg);
-      -ms-transform: translate(-105px, 35px) rotate(-140deg);
-          transform: translate(-105px, 35px) rotate(-140deg);
+  transform: translate(-105px, 35px) rotate(-140deg);
 }
 
 .resource-icon-toolbox {
@@ -817,3 +730,5 @@ i {
     margin-top: 80px;
   }
 }
+
+/*# sourceMappingURL=../Assets/css/resources.css.map */
