--- a/views/about.ejs
+++ b/views/about.ejs
@@ -2,6 +2,16 @@
 <html>
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120089347-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-120089347-1');
+    </script>
+
     <link rel="stylesheet" href="/Assets/css/about.css" type="text/css">
 
 <% include partials/header %>
