--- a/Public/Assets/css/resources.css
+++ b/Public/Assets/css/resources.css
@@ -731,4 +731,10 @@ i {
   }
 }
 
+@media screen and (max-width: 767px) {
+  .content {
+    margin-top: 20px;
+  }
+}
+
 /*# sourceMappingURL=../Assets/css/resources.css.map */
