--- a/views/resources.ejs
+++ b/views/resources.ejs
@@ -232,7 +232,7 @@
     <h3 style="margin: 40px auto;">Other Important Skills</h3>
 
     <div class="row">
-        <div class="col-4">
+        <div class="col-md-4 col-sm-12">
             <div class="list-group" id="list-tab" role="tablist">
                 <a class="list-group-item list-group-item-action active" id="list-home-list" data-toggle="list" href="#list-home" role="tab"
                     aria-controls="home">Analytics</a>
@@ -244,7 +244,7 @@
                     aria-controls="settings">Goals</a>
             </div>
         </div>
-        <div class="col-8">
+        <div class="col-md-8 col-sm-12 content">
             <div class="tab-content" id="nav-tabContent">
                 <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
                     <p class="left-justify">
