Corrected spelling errors

--- a/views/resources.ejs
+++ b/views/resources.ejs
@@ -248,26 +248,26 @@
             <div class="tab-content" id="nav-tabContent">
                 <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">
                     <p class="left-justify">
-                        Data collection and analysis is a key function of my job at State-Farm. We constently measure ourselves, and our fellow
-                        Team-mates to ensure that we are making and effective impact on the company. I also personally use Google Analytics to 
+                        Data collection and analysis is a key function of my job at State-Farm. We constantly measure ourselves, and our fellow
+                        Team-mates to ensure that we are making an effective impact on the company. I also personally use Google Analytics to 
                         assist a friend of mine with the status his email marketing, and funneling campaign which greatly improved his customers sales and public footprint.
                     </p>
                 </div>
                 <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">
                     <p class="left-justify">
-                        Another great tool that I have learned at my time working for State-Farm is communication. Although we opperate as a individuals
+                        Another great tool that I have learned at my time working for State-Farm is communication. Although we operate as a individuals
                         on the sales floor, interacting with one another and sharing information is crucial for making sure we are doing the job correctly.
                     </p>
                 </div>
                 <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">
                     <p class="left-justify"> 
-                        Team-work definetly makes the dream work. All puns aside, being able to get along and cooperate with your fellow peers and leadership is a must.
-                        I have always been taught that the easiest and most effective way to complete a goal is to work and collaberate with others.
+                        Team-work definitely makes the dream work. All puns aside, being able to get along and cooperate with your fellow peers and leadership is a must.
+                        I have always been taught that the easiest and most effective way to complete a goal is to work and collaborate with others.
                     </p>
                 </div>
                 <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list">
                     <p class="left-justify">
-                        From the very beginning of every project I do whether it be school related or for work, I always start off with a clear and achieveable goal in view.
+                        From the very beginning of every project I do whether it be school related or for work, I always start off with a clear and achievable goal in view.
                         I find the most effective way to accomplish a goal is to modularize it into smaller sections; I will start off with a simple End-Goal and then break 
                         it into smaller branches that are easier to visualize and help me succeed in the long run.
                     </p>
